--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,8 @@
 
-docker-up-infrastructure:
+docker-up:
 	@docker-compose -f docker-compose.infrastructure.yml up -d
-
+	
+install:
+	@npm install
 run:
 	@npm start
